k8s/vault/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: vault
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: default
      sectionName: vault-https
  hostnames:
    - vault.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: vault
          port: 8200
          weight: 1
